# aoc22

./: aoc22.cabal
lib/: Solution.hs
src/: day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs
