cabal-version:      2.4
name:               aoc22
version:            0.1.0.0
ghc:                9.4.2
synopsis:           Solutions for Advent of Code 2022
author:             Tyler Gallant

executable day1
    main-is:          day1.hs

    build-depends:
        base ^>=4.17.0.0,

    hs-source-dirs:   src
    default-language: Haskell2010

executable day2
    main-is:          day2.hs

    build-depends:
        base ^>=4.17.0.0,

    hs-source-dirs:   src
    default-language: Haskell2010

executable day3
    main-is:          day3.hs

    build-depends:
        base ^>=4.17.0.0,

    hs-source-dirs:   src
    default-language: Haskell2010
