cabal-version:  2.4
name:           aoc22
version:        0.1.0.0
ghc:            9.4.2
synopsis:       Solutions for Advent of Code 2022
author:         Tyler Gallant
data-dir:       inputs
data-files:     *.txt

library lib-internal
  exposed-modules:  Solution
  build-depends:    base ^>=4.17.0.0
  other-modules:    Paths_aoc22
  autogen-modules:  Paths_aoc22
  hs-source-dirs:   lib
  default-language: Haskell2010

executable day1
  main-is:          day1.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    base ^>=4.17.0.0,
    lib-internal

executable day2
  main-is:          day2.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    base ^>=4.17.0.0,
    lib-internal

executable day3
  main-is:          day3.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    base ^>=4.17.0.0,
    lib-internal

executable day4
  main-is:          day4.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    base ^>=4.17.0.0,
    lib-internal

executable day5
  main-is:          day5.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    base ^>=4.17.0.0,
    containers,
    lib-internal

executable day6
  main-is:          day6.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    base ^>=4.17.0.0,
    lib-internal

executable day7
  main-is:          day7.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    base ^>=4.17.0.0,
    lib-internal
